--- a/webpages/PDFS-webpage/pdfpages/dnd3.5update.html
+++ b/webpages/PDFS-webpage/pdfpages/dnd3.5update.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<embed src="PDFS/DnD35_update_booklet.pdf#page=1" type="application/pdf" width="100%" height="1000px"/>
+  <object type="application/pdf" width="100%" height="800" data="PDFS/DnD35_update_booklet.pdf"></object>
 </body>
 
 </html>
