--- a/webpages/PDFS-webpage/pdfpages/dungeonMaster'sGuide3.5.html
+++ b/webpages/PDFS-webpage/pdfpages/dungeonMaster'sGuide3.5.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<embed src="PDFS/Dungeon Master's Guide 3.5.pdf#page=1" type="application/pdf" width="100%" height="1000px"/>
+  <object type="application/pdf" width="100%" height="800" data="Dungeon Master's Guide 3.5.pdf"></object>
 </body>
 
 </html>
