--- a/webpages/PDFS-webpage/pdfpages/forgottenRealm3.5.html
+++ b/webpages/PDFS-webpage/pdfpages/forgottenRealm3.5.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<embed src="PDFS/Forgotten Realm Campaign Setting.pdf#page=1" type="application/pdf" width="100%" height="1000px"/>
+  <object type="application/pdf" width="100%" height="800" data="PDFS/Forgotten Realm Campaign Setting.pdf"></object>
 </body>
 
 </html>
