--- a/webpages/PDFS-webpage/pdfpages/monsterManual3.5.html
+++ b/webpages/PDFS-webpage/pdfpages/monsterManual3.5.html
@@ -2,7 +2,7 @@
 <html>
 
 <body>
-<embed src="PDFS/DnD v3.5Monster Manual.pdf#page=1" type="application/pdf" width="100%" height="1000px"/>
+  <object type="application/pdf" width="100%" height="800" data="PDFS/DnD v3.5Monster Manual.pdf"></object>
 </body>
 
 </html>
