--- a/webpages/PDFS-webpage/pdfpages/player'sHandbook3.5.html
+++ b/webpages/PDFS-webpage/pdfpages/player'sHandbook3.5.html
@@ -2,6 +2,7 @@
 <html>
 
 <body>
+  <object type="application/pdf" width="100%" height="800" data="PDFS/player's handbook 3.5.pdf"></object>
 <embed src="PDFS/player's handbook 3.5.pdf#page=1" type="application/pdf" width="100%" height="1000px"/>
 </body>
 
