--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 <link rel="stylesheet" href="main.css">
-<script src="functions.js"></script>
+<script src="indexFunction.js"></script>
 
 </head>
 
