--- a/webpages/music-webpage/music.html
+++ b/webpages/music-webpage/music.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLycVTiaj8OI8F5vZlwv4NnvGwc84ITnW2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLycVTiaj8OI8F5vZlwv4NnvGwc84ITnW2" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
   <h2> Ghost B.C. </h2>
   <h6> From the Pinnacle to the Pit </h6>
