magic of icnarnum

--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="CSSpdf.css">
+<script src="pdfFunctions.js"></script>
 </head>
 <body>
 
@@ -36,6 +37,10 @@ Forgotten Realm Campaign Setting 3
 <h6></h6>
 <a href="pdfpages/forgottenRealmUpdate3.5.html">
 Forgotten Realm 3.5 Update
+</a>
+<h6></h6>
+<a href="pdfpages/MagicOfIncarnum3.5.html">
+Magic Of Incarnum
 </a>
 <h6></h6>
 <a href="pdfpages/monsterManual3.5.html">
