--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h1>PFDS</h1>
+<h1 onclick="playMusic()">PFDS</h1>
 <a href="pdfpages/completeMage3.5.html">
 Complete Mage 3.5
 </a>
@@ -62,6 +62,8 @@ Psionic Handbook 3.5
 <a href="pdfpages/spellCompendium3.5.html">
 Spell Compendium 3.5
 </a>
+
+<audio id = "audio" src="d&dBattlemusic.mp3"/>
 
 </body>
 
