added pink floyd songs

--- a/webpages/video-webpage/video.html
+++ b/webpages/video-webpage/video.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <body>
+    <h1>The Beatles</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLycVTiaj8OI8F5vZlwv4NnvGwc84ITnW2"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     style="top:15px;left:0px;">
@@ -22,6 +23,16 @@
     style="top:350px;left:0px;">
     </iframe>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLycVTiaj8OI-aOPBmpwUlhQp83Puf0hLX"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
+
+    <h1>Pink Floyd</h1>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLyDzU3p8FP24syYfTXpGqTDHsQhlxwllS"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PL3PhWT10BW3Urh8ZXXpuU9h526ChwgWKy"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     style="top:350px;left:0px;">
     </iframe>
