add help, revolver, and rubber soul

--- a/webpages/video-webpage/video.html
+++ b/webpages/video-webpage/video.html
@@ -26,6 +26,18 @@
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     style="top:350px;left:0px;">
     </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLkLimRXN6NKyRHpZeZEoc8sz73S1-ddvX"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLkLimRXN6NKygvESCW_WHDRJLfm2VT01Q"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLycVTiaj8OI9JtydS7uKMO1FGl8UDBmcZ"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
 
     <h1>Pink Floyd</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLyDzU3p8FP24syYfTXpGqTDHsQhlxwllS"
