New Ghost songs

--- a/webpages/music-webpage/music.html
+++ b/webpages/music-webpage/music.html
@@ -9,7 +9,14 @@
   <audio controls>
     <source src="music/Ghost/From The Pinnacle To The Pit.mp3" type="audio/mp3"/>
   </audio>
-
+  <h6> Cirice </h6>
+  <audio controls>
+    <source src="music/Ghost/Cirice.mp3" type="audio/mp3"/>
+  </audio>
+  <h6> Faith </h6>
+  <audio controls>
+    <source src="music/Ghost/Faith.mp3" type="audio/mp3"/>
+  </audio>
   <h6> He is </h6>
   <audio controls>
     <source src="music/Ghost/He Is.mp3" type="audio/mp3"/>
