--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -7,60 +7,203 @@
 <body>
 
 <h1 onclick="playMusic()">PFDS</h1>
-<a href="pdfpages/completeMage3.5.html">
-Complete Mage 3.5
+<a href="pdfpages/PDFS/Arms_and_Equipment_Guide.pdf">
+Arms and Equipment Guide
 </a>
-<h6></h6>
-<a href="pdfpages/deitiesAndDemigods3.5.html">
+<a href="pdfpages/PDFS/Book of Exalted Deeds.pdf">
+Book of Exalted Deeds
+</a>
+<a href="pdfpages/PDFS/Book of Vile Darkness.pdf">
+Book of Vile Darkness
+</a>
+<a href="pdfpages/PDFS/Cityscape.pdf">
+Cityscape
+</a>
+<a href="pdfpages/PDFS/Complete Adventurer.pdf">
+Complete Adventurer
+</a>
+<a href="pdfpages/PDFS/Complete Arcane.pdf">
+Complete Arcane
+</a>
+<a href="pdfpages/PDFS/Complete Champion.pdf">
+Complete Champion
+</a>
+<a href="pdfpages/PDFS/Complete Scoundrel.pdf">
+Complete Scoundrel
+</a>
+<a href="pdfpages/PDFS/Complete Warrior.pdf">
+Complete Warrior
+</a>
+<a href="pdfpages/PDFS/Complete_Mage.pdf">
+Complete Mage
+</a>
+<a href="pdfpages/PDFS/CompleteDivine.pdf">
+Complete Divine
+</a>
+<a href="pdfpages/PDFS/CompletePsionic.pdf">
+CompletePsionic
+</a>
+<a href="pdfpages/PDFS/Defenders of the Faith.pdf">
+Defenders of the Faith
+</a>
+<a href="pdfpages/PDFS/Deities & Demigods.pdf">
 Deities and Demigods 3.5
 </a>
-<h6></h6>
-<a href="pdfpages/dnd3.5update.html">
+<a href="pdfpages/PDFS/DnD35_update_booklet.pdf">
 3.5 Update Booklet
 </a>
-<h6></h6>
-<a href="pdfpages/draconomicon.html">
+<a href="pdfpages/PDFS/draconomicon.pdf">
 Draconomicon 3.5
 </a>
-<h6></h6>
-<a href="pdfpages/dungeonMaster'sGuide3.5.html">
+<a href="pdfpages/PDFS/Dragon Magic.pdf">
+Dragon Magic
+</a>
+<a href="pdfpages/PDFS/Drow of the Underdark.pdf">
+Drow of the Underdark
+</a>
+<a href="pdfpages/PDFS/Dungeon Master's Guide 3.5.pdf">
 Dungeon Master's Guide 3.5
 </a>
-<h6></h6>
-<a href="pdfpages/epicLevelsHandbook3.5.html">
-Epic Levels Hanbook 3.5
+<a href="pdfpages/PDFS/Dungeon Survival Guide.pdf">
+Dungeon Survival Guide
 </a>
-<h6></h6>
-<a href="pdfpages/forgottenRealm3.5.html">
+<a href="pdfpages/PDFS/Dungeonscape.pdf">
+Dungeonscape
+</a>
+<a href="pdfpages/PDFS/Elder Evils.pdf">
+Elder Evils
+</a>
+<a href="pdfpages/PDFS/Enemies And Allies.pdf">
+Enemies and Allies
+</a>
+<a href="pdfpages/PDFS/EpicLevelHandbook.pdf">
+Epic levels Handbook
+</a>
+<a href="pdfpages/PDFS/Exemplars of Evil.pdf">
+Exemplars of Evil
+</a>
+<a href="pdfpages/PDFS/expanded psionic handbook.pdf">
+Expanded Psionic Handbook
+</a>
+<a href="pdfpages/PDFS/Fiend Folio.pdf">
+Fiend Folio
+</a>
+<a href="pdfpages/PDFS/Fiendish Codex 1.pdf">
+Fiendish Codex 1
+</a>
+<a href="pdfpages/PDFS/Fiendish Codex 2.pdf">
+Fiendish Codex 2
+</a>
+<a href="pdfpages/PDFS/Forgotten Realm Campaign Setting.pdf">
 Forgotten Realm Campaign Setting 3
 </a>
-<h6></h6>
-<a href="pdfpages/forgottenRealmUpdate3.5.html">
+<a href="pdfpages/PDFS/FRCSerrata.pdf">
 Forgotten Realm 3.5 Update
 </a>
-<h6></h6>
-<a href="pdfpages/MagicOfIncarnum3.5.html">
+<a href="pdfpages/PDFS/Frostburn.pdf">
+Frostburn
+</a>
+<a href="pdfpages/PDFS/Ghostwalk.pdf">
+Ghostwalk
+</a>
+<a href="pdfpages/PDFS/Hero Builder's Guidebook.pdf">
+Hero Builder's Guidebook
+</a>
+<a href="pdfpages/PDFS/Heroes of Battle.pdf">
+Heroes of Battle
+</a>
+<a href="pdfpages/PDFS/Heroes of Horror.pdf">
+Heroes of Horror
+</a>
+<a href="pdfpages/PDFS/Libris_Mortis.pdf">
+Libris Mortis
+</a>
+<a href="pdfpages/PDFS/Lords of Madness.pdf">
+Lords of Madness
+</a>
+<a href="pdfpages/PDFS/Magic Item Compendium.pdf">
+Magic Item Compendium
+</a>
+<a href="pdfpages/PDFS/Magic of Incarnum.pdf">
 Magic Of Incarnum
 </a>
-<h6></h6>
-<a href="pdfpages/monsterManual3.5.html">
+<a href="pdfpages/PDFS/Manual_of_the_Planes.pdf">
+Manual of the planes
+</a>
+<a href="pdfpages/PDFS/Miniatures Handbook.pdf">
+Miniatures Handbook
+</a>
+<a href="pdfpages/PDFS/Monster Manual.pdf">
 Monster Manual 3.5
 </a>
-<h6></h6>
-<a href="pdfpages/player'sHandbook3.5.html">
+<a href="pdfpages/PDFS/motwild.pdf">
+Masters of the Wild
+</a>
+<a href="pdfpages/PDFS/OrAdventures.pdf">
+Oriental Adventures
+</a>
+<a href="pdfpages/PDFS/Planar Handbook.pdf">
+Planar Handbook
+</a>
+<a href="pdfpages/PDFS/player's handbook 3.5.pdf">
 Player's Handbook 3.5
 </a>
-<h6></h6>
-<a href="pdfpages/playersHandbook5.html">
+<a href="pdfpages/PDFS/player's handbook5.pdf">
 Players Handbook 5
 </a>
-<h6></h6>
-<a href="pdfpages/psionicHandbook3.5.html">
-Psionic Handbook 3.5
+<a href="pdfpages/PDFS/psionic_handbook.pdf">
+Psionic Handbook 3.0
 </a>
-<h6></h6>
-<a href="pdfpages/spellCompendium3.5.html">
-Spell Compendium 3.5
+<a href="pdfpages/PDFS/Races of Destiny.pdf">
+Races of Destiny
+</a>
+<a href="pdfpages/PDFS/Races of Stone.pdf">
+Races of Stone
+</a>
+<a href="pdfpages/PDFS/Races of the Dragon.pdf">
+Races of the Dragon
+</a>
+<a href="pdfpages/PDFS/Races of the Wild.pdf">
+Races of the Wild
+</a>
+<a href="pdfpages/PDFS/Rules Compendium.pdf">
+Rules Compendium
+</a>
+<a href="pdfpages/PDFS/Sandstorm.pdf">
+Sandstorm
+</a>
+<a href="pdfpages/PDFS/Savage Species.pdf">
+Savage Species
+</a>
+<a href="pdfpages/PDFS/SongAndSilence.pdf">
+Song and Silence
+</a>
+<a href="pdfpages/PDFS/Spell_Compendium.pdf">
+Spell Compendium
+</a>
+<a href="pdfpages/PDFS/Stormwrack.pdf">
+Stormwrack
+</a>
+<a href="pdfpages/PDFS/Stronghold Builder's Guidebook.pdf">
+Stronghold Builder's Guidebook
+</a>
+<a href="pdfpages/PDFS/Sword_and_Fist.pdf">
+Sword and Fist
+</a>
+<a href="pdfpages/PDFS/Tome of Battle.pdf">
+Tome of Battle
+</a>
+<a href="pdfpages/PDFS/Tome of Magic.pdf">
+Tome of Magic
+</a>
+<a href="pdfpages/PDFS/TomeAndBlood.pdf">
+Tome and Blood
+</a>
+<a href="pdfpages/PDFS/uarcana.pdf">
+Unearthed Arcana
+</a>
+<a href="pdfpages/PDFS/Weapons of Legacy.pdf">
+Weapons of Legacy
 </a>
 
 <audio id = "audio" src="d&dBattlemusic.mp3"/>
