added beatles complete playlist

--- a/webpages/video-webpage/video.html
+++ b/webpages/video-webpage/video.html
@@ -38,6 +38,10 @@
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     style="top:350px;left:0px;">
     </iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLYq_mcte9NvDA2Xi5Qjl1DrH5LuDKDlAI"
+    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+    style="top:350px;left:0px;">
+    </iframe>
 
     <h1>Pink Floyd</h1>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PLyDzU3p8FP24syYfTXpGqTDHsQhlxwllS"
@@ -58,7 +62,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/?listType=playlist&list=PL09geab6-25X3Ix_JAFXS2-Olh_QYj8YD"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
     style="top:350px;left:0px;">
-    </iframe>  
+    </iframe>
 
   </body>
 </html>
