--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
 
-<h1 id="title">Dungeon Master 13</h1>
+<h1 id="title">Dungeon Master</h1>
 
 <div>
 	<a id="link1" href="webpages/PDFS-webpage/pdflinks.html" target="_blank" style="position:absolute;left:3%;top:85px;font-size:20px;">pdfs</a>
