Made pdf links open new tab

--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -7,267 +7,267 @@
 <body>
 
 <h1 onclick="playMusic()">PFDS</h1>
-<a href="pdfpages/PDFS/Arms_and_Equipment_Guide.pdf">
+<a href="pdfpages/PDFS/Arms_and_Equipment_Guide.pdf" target="_blank">
 Arms and Equipment Guide
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Book of Exalted Deeds.pdf">
+<a href="pdfpages/PDFS/Book of Exalted Deeds.pdf" target="_blank">
 Book of Exalted Deeds
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Book of Vile Darkness.pdf">
+<a href="pdfpages/PDFS/Book of Vile Darkness.pdf" target="_blank">
 Book of Vile Darkness
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Cityscape.pdf">
+<a href="pdfpages/PDFS/Cityscape.pdf" target="_blank">
 Cityscape
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete Adventurer.pdf">
+<a href="pdfpages/PDFS/Complete Adventurer.pdf" target="_blank">
 Complete Adventurer
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete Arcane.pdf">
+<a href="pdfpages/PDFS/Complete Arcane.pdf" target="_blank">
 Complete Arcane
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete Champion.pdf">
+<a href="pdfpages/PDFS/Complete Champion.pdf" target="_blank">
 Complete Champion
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete Scoundrel.pdf">
+<a href="pdfpages/PDFS/Complete Scoundrel.pdf" target="_blank">
 Complete Scoundrel
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete Warrior.pdf">
+<a href="pdfpages/PDFS/Complete Warrior.pdf" target="_blank">
 Complete Warrior
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Complete_Mage.pdf">
+<a href="pdfpages/PDFS/Complete_Mage.pdf" target="_blank">
 Complete Mage
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/CompleteDivine.pdf">
+<a href="pdfpages/PDFS/CompleteDivine.pdf" target="_blank">
 Complete Divine
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/CompletePsionic.pdf">
+<a href="pdfpages/PDFS/CompletePsionic.pdf" target="_blank">
 CompletePsionic
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Defenders of the Faith.pdf">
+<a href="pdfpages/PDFS/Defenders of the Faith.pdf" target="_blank">
 Defenders of the Faith
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Deities & Demigods.pdf">
+<a href="pdfpages/PDFS/Deities & Demigods.pdf" target="_blank">
 Deities and Demigods 3.5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/DnD35_update_booklet.pdf">
+<a href="pdfpages/PDFS/DnD35_update_booklet.pdf" target="_blank">
 3.5 Update Booklet
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/draconomicon.pdf">
+<a href="pdfpages/PDFS/draconomicon.pdf" target="_blank">
 Draconomicon 3.5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Dragon Magic.pdf">
+<a href="pdfpages/PDFS/Dragon Magic.pdf" target="_blank">
 Dragon Magic
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Drow of the Underdark.pdf">
+<a href="pdfpages/PDFS/Drow of the Underdark.pdf" target="_blank">
 Drow of the Underdark
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Dungeon Master's Guide 3.5.pdf">
+<a href="pdfpages/PDFS/Dungeon Master's Guide 3.5.pdf" target="_blank">
 Dungeon Master's Guide 3.5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Dungeon Survival Guide.pdf">
+<a href="pdfpages/PDFS/Dungeon Survival Guide.pdf" target="_blank">
 Dungeon Survival Guide
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Dungeonscape.pdf">
+<a href="pdfpages/PDFS/Dungeonscape.pdf" target="_blank">
 Dungeonscape
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Elder Evils.pdf">
+<a href="pdfpages/PDFS/Elder Evils.pdf" target="_blank">
 Elder Evils
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Enemies And Allies.pdf">
+<a href="pdfpages/PDFS/Enemies And Allies.pdf" target="_blank">
 Enemies and Allies
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/EpicLevelHandbook.pdf">
+<a href="pdfpages/PDFS/EpicLevelHandbook.pdf" target="_blank">
 Epic levels Handbook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Exemplars of Evil.pdf">
+<a href="pdfpages/PDFS/Exemplars of Evil.pdf" target="_blank">
 Exemplars of Evil
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/expanded psionic handbook.pdf">
+<a href="pdfpages/PDFS/expanded psionic handbook.pdf" target="_blank">
 Expanded Psionic Handbook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Fiend Folio.pdf">
+<a href="pdfpages/PDFS/Fiend Folio.pdf" target="_blank">
 Fiend Folio
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Fiendish Codex 1.pdf">
+<a href="pdfpages/PDFS/Fiendish Codex 1.pdf" target="_blank">
 Fiendish Codex 1
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Fiendish Codex 2.pdf">
+<a href="pdfpages/PDFS/Fiendish Codex 2.pdf" target="_blank">
 Fiendish Codex 2
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Forgotten Realm Campaign Setting.pdf">
+<a href="pdfpages/PDFS/Forgotten Realm Campaign Setting.pdf" target="_blank">
 Forgotten Realm Campaign Setting 3
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/FRCSerrata.pdf">
+<a href="pdfpages/PDFS/FRCSerrata.pdf" target="_blank">
 Forgotten Realm 3.5 Update
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Frostburn.pdf">
+<a href="pdfpages/PDFS/Frostburn.pdf" target="_blank">
 Frostburn
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Ghostwalk.pdf">
+<a href="pdfpages/PDFS/Ghostwalk.pdf" target="_blank">
 Ghostwalk
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Hero Builder's Guidebook.pdf">
+<a href="pdfpages/PDFS/Hero Builder's Guidebook.pdf" target="_blank">
 Hero Builder's Guidebook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Heroes of Battle.pdf">
+<a href="pdfpages/PDFS/Heroes of Battle.pdf"target="_blank">
 Heroes of Battle
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Heroes of Horror.pdf">
+<a href="pdfpages/PDFS/Heroes of Horror.pdf" target="_blank">
 Heroes of Horror
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Libris_Mortis.pdf">
+<a href="pdfpages/PDFS/Libris_Mortis.pdf" target="_blank">
 Libris Mortis
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Lords of Madness.pdf">
+<a href="pdfpages/PDFS/Lords of Madness.pdf" target="_blank">
 Lords of Madness
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Magic Item Compendium.pdf">
+<a href="pdfpages/PDFS/Magic Item Compendium.pdf" target="_blank">
 Magic Item Compendium
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Magic of Incarnum.pdf">
+<a href="pdfpages/PDFS/Magic of Incarnum.pdf"target="_blank">
 Magic Of Incarnum
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Manual_of_the_Planes.pdf">
+<a href="pdfpages/PDFS/Manual_of_the_Planes.pdf" target="_blank">
 Manual of the planes
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Miniatures Handbook.pdf">
+<a href="pdfpages/PDFS/Miniatures Handbook.pdf" target="_blank">
 Miniatures Handbook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Monster Manual.pdf">
+<a href="pdfpages/PDFS/Monster Manual.pdf" target="_blank">
 Monster Manual 3.5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/motwild.pdf">
+<a href="pdfpages/PDFS/motwild.pdf" target="_blank">
 Masters of the Wild
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/OrAdventures.pdf">
+<a href="pdfpages/PDFS/OrAdventures.pdf" target="_blank">
 Oriental Adventures
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Planar Handbook.pdf">
+<a href="pdfpages/PDFS/Planar Handbook.pdf"target="_blank">
 Planar Handbook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/player's handbook 3.5.pdf">
+<a href="pdfpages/PDFS/player's handbook 3.5.pdf" target="_blank">
 Player's Handbook 3.5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/player's handbook5.pdf">
+<a href="pdfpages/PDFS/player's handbook5.pdf" target="_blank">
 Players Handbook 5
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/psionic_handbook.pdf">
+<a href="pdfpages/PDFS/psionic_handbook.pdf" target="_blank">
 Psionic Handbook 3.0
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Races of Destiny.pdf">
+<a href="pdfpages/PDFS/Races of Destiny.pdf" target="_blank">
 Races of Destiny
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Races of Stone.pdf">
+<a href="pdfpages/PDFS/Races of Stone.pdf" target="_blank">
 Races of Stone
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Races of the Dragon.pdf">
+<a href="pdfpages/PDFS/Races of the Dragon.pdf" target="_blank">
 Races of the Dragon
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Races of the Wild.pdf">
+<a href="pdfpages/PDFS/Races of the Wild.pdf" target="_blank">
 Races of the Wild
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Rules Compendium.pdf">
+<a href="pdfpages/PDFS/Rules Compendium.pdf" target="_blank">
 Rules Compendium
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Sandstorm.pdf">
+<a href="pdfpages/PDFS/Sandstorm.pdf" target="_blank">
 Sandstorm
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Savage Species.pdf">
+<a href="pdfpages/PDFS/Savage Species.pdf" target="_blank">
 Savage Species
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/SongAndSilence.pdf">
+<a href="pdfpages/PDFS/SongAndSilence.pdf" target="_blank">
 Song and Silence
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Spell_Compendium.pdf">
+<a href="pdfpages/PDFS/Spell_Compendium.pdf" target="_blank">
 Spell Compendium
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Stormwrack.pdf">
+<a href="pdfpages/PDFS/Stormwrack.pdf" target="_blank">
 Stormwrack
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Stronghold Builder's Guidebook.pdf">
+<a href="pdfpages/PDFS/Stronghold Builder's Guidebook.pdf" target="_blank">
 Stronghold Builder's Guidebook
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Sword_and_Fist.pdf">
+<a href="pdfpages/PDFS/Sword_and_Fist.pdf" target="_blank">
 Sword and Fist
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Tome of Battle.pdf">
+<a href="pdfpages/PDFS/Tome of Battle.pdf" target="_blank">
 Tome of Battle
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Tome of Magic.pdf">
+<a href="pdfpages/PDFS/Tome of Magic.pdf" target="_blank">
 Tome of Magic
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/TomeAndBlood.pdf">
+<a href="pdfpages/PDFS/TomeAndBlood.pdf" target="_blank">
 Tome and Blood
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/uarcana.pdf">
+<a href="pdfpages/PDFS/uarcana.pdf" target="_blank">
 Unearthed Arcana
 </a>
 <h1></h1>
-<a href="pdfpages/PDFS/Weapons of Legacy.pdf">
+<a href="pdfpages/PDFS/Weapons of Legacy.pdf" target="_blank">
 Weapons of Legacy
 </a>
 
