--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -7,6 +7,11 @@
 <body>
 
 <h1 onclick="playMusic()">PFDS</h1>
+
+<a href="campaigns.html" target="_blank">
+Campaigns
+</a>
+
 <a href="pdfpages/PDFS/Arms_and_Equipment_Guide.pdf" target="_blank">
 Arms and Equipment Guide
 </a>
