--- a/webpages/PDFS-webpage/campaigns.html
+++ b/webpages/PDFS-webpage/campaigns.html
@@ -5,7 +5,7 @@
 <script src="pdfFunctions.js"></script>
 </head>
 <body>
-<a href="pdfpages/PDFS/Expedition to the Demonweb Pits.pdf target="_blank">
+<a href="pdfpages/PDFS/Expedition to the Demonweb Pits.pdf" target="_blank">
 Expedition to the Demonweb Pits
 </a>
 <h1></h1>
