Added Return to the Temple of Elemental Evil.pdf

--- a/webpages/PDFS-webpage/campaigns.html
+++ b/webpages/PDFS-webpage/campaigns.html
@@ -8,5 +8,10 @@
 <a href="pdfpages/PDFS/Expedition to the Demonweb Pits.pdf" target="_blank">
 Expedition to the Demonweb Pits
 </a>
+
+<a href="pdfpages/PDFS/Return to the Temple of Elemental Evil.pdf" target="_blank">
+Return to the Temple of Elemental Evil
+</a>
+
 <h1></h1>
 </body>
