--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 <h1 id="title">Dungeon Master</h1>
 
 <div>
-	<a id="link1" href="webpages/PDFS-webpage/pdflinks.html" target="_blank" style="position:absolute;left:3%;top:85px;font-size:20px;">pdfs</a>
+	<a id="link1" href="webpages/PDFS-webpage/pdflinks.html" target="_blank" style="position:absolute;left:3%;top:85px;font-size:20px;">DND</a>
 	<img id= "rect1" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:0%;">
 	<a id="link2" href="webpages/game webpage/gamelinks.html" target="_blank" style="position:absolute;left:13%;top:85px;font-size:20px;"></a>
 	<img id= "rect2" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:10%;">
-	<a id="link3" href="webpages/music-webpage/music.html" target="_blank" style="position:absolute;left:23%;top:85px;font-size:20px;">Music</a>
+	<a id="link3" href="webpages/video-webpage/video.html" target="_blank" style="position:absolute;left:23%;top:85px;font-size:20px;">Music</a>
 	<img id= "rect3" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:20%;">
-		<a id="link3" href="webpages/video-webpage/video.html" target="_blank" style="position:absolute;left:33%;top:85px;font-size:20px;">Videos</a>
 	<img id= "rect4" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:30%;">
 	<img id= "rect5" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:40%;">
 	<img id= "rect6" src="pictures/rectangle.png" style="width:10%;height:35px;top:15px;left:50%;">
