--- a/webpages/PDFS-webpage/pdflinks.html
+++ b/webpages/PDFS-webpage/pdflinks.html
@@ -96,6 +96,10 @@ Dungeon Survival Guide
 Dungeonscape
 </a>
 <h1></h1>
+<a href="pdfpages/PDFS/Eberron Campaign Setting.pdf" target="_blank">
+Eberron Campaign Setting
+</a>
+<h1></h1>
 <a href="pdfpages/PDFS/Elder Evils.pdf" target="_blank">
 Elder Evils
 </a>
